# PyOptionalLib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  linting.yaml  release.yaml
optional/: __init__.py
refs/tags/0.0.1rc/: index.html
refs/tags/0.0.2rc/: index.html
refs/tags/0.0.3rc/: index.html
tests/: conftest.py  optional_test.py
