[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{name = "alexandre399", email = "alexandre399.pypi@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []
description = "An Implementation of the Optional Object for Python"
dynamic = ["version"]
keywords = ["Optional"]
license = {file = "LICENSE"}
maintainers = [{name = "alexandre399", email = "alexandre399.pypi@gmail.com"}]
name = "py-joptional"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[project.urls]
Changelog = "https://github.com/alexandre399/py-joptional/blob/main/CHANGELOG.md"
# DOWNLOAD = "?????????????????????????"
Documentation = "https://github.com/alexandre399/py-joptional/blob/main/README.md"
Homepage = "https://github.com/alexandre399/py-joptional/tree/main"
Issues = "https://github.com/alexandre399/py-joptional/issues"
Repository = "https://github.com/alexandre399/py-joptional.git"

[tool.setuptools_scm]
version_file = "optional/_version.py"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "__pycache__",
  "build",
  ".eggs",
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "build",
  "site-packages",
  "venv",
]

# Same as Black.
indent-width = 4
line-length = 120

# Assume Python 3.10
target-version = "py310"
unsafe-fixes = true

[tool.ruff.lint]
exclude = ["tests"]
ignore = ["D211", "D213", "D203", "COM812"]
select = ["ALL"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PL", "S", "ARG", "ANN", "D"]

[tool.ruff.format]
exclude = ["**/_version.py"]

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
exclude = [
  "__pycache__",
  "build",
  ".eggs",
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "build",
  "site-packages",
  "tests",
  "venv",
]
implicit_optional = true

[tool.commitizen]
name = "cz_conventional_commits"

[tool.radon]
exclude = "*~,.git/*,.mypy_cache/*,.pytest_cache/*,.ruff_cache/*,build/*,.venv*,__pycache__/*,dist/*,tests/*"

# Configuration for pytest
# https://docs.pytest.org/en/latest/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
norecursedirs = []
testpaths = "tests" # directory containing your tests
# Warnings that should be ignored
filterwarnings = [
  "ignore::DeprecationWarning",
]
# custom markers that can be used using pytest.mark
markers = []

[tool.coverage.report]
fail_under = 90

# Configuration for coverage.py
[tool.coverage.run]
branch = true
omit = ["**/_version.py"]
source = [
  "optional",
]
